--- a/src/assets/css/Linkto.css
+++ b/src/assets/css/Linkto.css
@@ -19,10 +19,15 @@
 }
 
 .linkto-content{
-    width: 80%;
+    display: flex;
+    align-items: center;
+    width: auto;
+    padding-left: 30px;
     height: 10vh;
     color: white;
     overflow: hidden;
+    /*
     overflow-y: scroll;
     scrollbar-width: none;
+    */
 }
