--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -10,6 +10,18 @@
     background-repeat: no-repeat;
 }
 
-.soundcloud-section{
+.section{
     justify-items: center;
+    padding: 2vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
+/* .soundcloud{}*/
+
+.notes{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
 }
