--- a/src/containers/css/Home.css
+++ b/src/containers/css/Home.css
@@ -1,28 +1,54 @@
 .home{
-    height: 200vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.presentation{
-    width: 100%;
-    height: 100vh;
-    background-image: url("../../assets/banners/engbann.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.presentation {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../../assets/banners/engbann.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;  
+  padding-bottom: 1rem;     
 }
 
-.section{
-    justify-items: center;
-    padding: 2vh;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-}
 
 /* .soundcloud{}*/
 
 .notes{
     display: flex;
     justify-content: center;
-    background-color: black;
-    color: white;
+    background-color: #fff;
+    
+}
+
+.notes.section.container {
+  display: flex;
+  gap: 20px; 
+  flex-wrap: wrap;
+  padding: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.notes-left {
+  flex: 1; 
+  min-width: 300px;
+}
+
+.notes-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;       
+}
+
+.notes-right .card-wrapper {
+  flex: 1;           
 }
